fix: update image size on mobile & desktop

--- a/practices/practice-one/src/assets/stylesheets/components/_card.scss
+++ b/practices/practice-one/src/assets/stylesheets/components/_card.scss
@@ -17,6 +17,13 @@
       background: $bg-color-primary;
       border-radius: 5px;
       padding: 18px 20px;
+
+      .img-item {
+        @include only-for-tablet() {
+          width: 200px;
+          height: 200px;
+        }
+      }
     }
   }
 
